link image to homepage

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
   <body>
     <div class="container w-75 p-3">
       <div class="card mb-3">
-        <img src="https://i.imgur.com/iPRrXaM.jpg" class="card-img-top" alt="ingredients to make spaghetti">
+        <a href="/"><img src="https://i.imgur.com/iPRrXaM.jpg" class="card-img-top" alt="ingredients to make spaghetti"></a>
         <div class="card-body">
           <h2 class="display-3"><%= title %></h2>
           <p class="card-text">COMING SOON: Find, create, save, and share your favourite recipes.</p>
