--- a/views/api/index.ejs
+++ b/views/api/index.ejs
@@ -116,7 +116,7 @@
           <div class="card-header bg-info" id="headingFour">
             <p class="mb-0">
               <button class="btn btn-link collapsed text-white" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">USERS</button> 
-            <small class="text-white">/api/users</small></p>
+            <small class="text-white">/users</small></p>
           </div>
           <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
             <div class="card-body">
@@ -163,7 +163,7 @@
         <div class="card">
           <div class="card-header bg-info" id="headingFive">
             <p class="mb-0">
-              <button class="btn btn-link collapsed text-white" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">RECIPES</button><small class="text-white">/api/recipes</small>
+              <button class="btn btn-link collapsed text-white" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">RECIPES</button><small class="text-white">/recipes</small>
             </p>
           </div>
           <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
